err/django-db-log.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_db_log-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/djangodblog'...
Listing './lib/python3.5/site-packages/djangodblog/management'...
Listing './lib/python3.5/site-packages/djangodblog/management/commands'...
Compiling './lib/python3.5/site-packages/djangodblog/manager.py'...
***   File "./lib/python3.5/site-packages/djangodblog/manager.py", line 79
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangodblog/migrations'...
Compiling './lib/python3.5/site-packages/djangodblog/models.py'...
***   File "./lib/python3.5/site-packages/djangodblog/models.py", line 141
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangodblog/templates'...
Listing './lib/python3.5/site-packages/djangodblog/templates/admin'...
Listing './lib/python3.5/site-packages/djangodblog/templates/admin/djangodblog'...
Listing './lib/python3.5/site-packages/djangodblog/templates/admin/djangodblog/error'...
Listing './lib/python3.5/site-packages/djangodblog/templates/admin/djangodblog/errorbatch'...
Listing './lib/python3.5/site-packages/djangodblog/templates/admin/djangodblog/partials'...
Listing './lib/python3.5/site-packages/djangodblog/templatetags'...
Listing './lib/python3.5/site-packages/djangodblog/tests'...
Compiling './lib/python3.5/site-packages/djangodblog/tests/tests.py'...
***   File "./lib/python3.5/site-packages/djangodblog/tests/tests.py", line 24
    print "Skipping test: %s.%s" % (self.__class__.__name__, func.__name__)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangodblog/utils.py'...
***   File "./lib/python3.5/site-packages/djangodblog/utils.py", line 36
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
